lkt/bootstrap/src/liblktlang.h


typedef struct
{
   uint64_t serial_number;
} *lkt_analysis_context;
typedef struct
{
   uint64_t version_number;
} *lkt_analysis_unit;
typedef struct {
   uint32_t thin_sym;
   void *table;
} lkt_symbol_type;
typedef uint8_t lkt_bool;
typedef struct {
    uint32_t line;
    uint16_t column;
} lkt_source_location;
typedef struct {
    lkt_source_location start;
    lkt_source_location end;
} lkt_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} lkt_text;
typedef struct
{
   uint64_t version;
} *lkt_token_data_handler;
typedef struct {
    lkt_analysis_context context;
    lkt_token_data_handler token_data;
    int token_index, trivia_index;
} lkt_token;
typedef struct {
    lkt_source_location_range sloc_range;
    lkt_text message;
} lkt_diagnostic;
   typedef enum {
      LKT_ANALYSIS_UNIT_KIND_UNIT_SPECIFICATION, LKT_ANALYSIS_UNIT_KIND_UNIT_BODY
   } lkt_analysis_unit_kind;
   typedef enum {
      LKT_GRAMMAR_RULE_MAIN_RULE_RULE, LKT_GRAMMAR_RULE_ID_RULE, LKT_GRAMMAR_RULE_REF_ID_RULE, LKT_GRAMMAR_RULE_TYPE_REF_ID_RULE, LKT_GRAMMAR_RULE_DEF_ID_RULE, LKT_GRAMMAR_RULE_DOC_RULE, LKT_GRAMMAR_RULE_IMPORT_STMT_RULE, LKT_GRAMMAR_RULE_IMPORTS_RULE, LKT_GRAMMAR_RULE_LEXER_DECL_RULE, LKT_GRAMMAR_RULE_GRAMMAR_DECL_RULE, LKT_GRAMMAR_RULE_GRAMMAR_RULE_RULE, LKT_GRAMMAR_RULE_LEXER_RULE_RULE, LKT_GRAMMAR_RULE_LEXER_FAMILY_DECL_RULE, LKT_GRAMMAR_RULE_LEXER_CASE_RULE_RULE, LKT_GRAMMAR_RULE_LEXER_CASE_ALT_RULE, LKT_GRAMMAR_RULE_LEXER_CASE_SEND_RULE, LKT_GRAMMAR_RULE_GRAMMAR_PRIMARY_RULE, LKT_GRAMMAR_RULE_GRAMMAR_EXPR_RULE, LKT_GRAMMAR_RULE_GRAMMAR_PICK_RULE, LKT_GRAMMAR_RULE_GRAMMAR_IMPLICIT_PICK_RULE, LKT_GRAMMAR_RULE_GRAMMAR_OPT_RULE, LKT_GRAMMAR_RULE_GRAMMAR_OPT_ERROR_RULE, LKT_GRAMMAR_RULE_GRAMMAR_CUT_RULE, LKT_GRAMMAR_RULE_GRAMMAR_STOPCUT_RULE, LKT_GRAMMAR_RULE_GRAMMAR_OR_EXPR_RULE, LKT_GRAMMAR_RULE_GRAMMAR_DISCARD_EXPR_RULE, LKT_GRAMMAR_RULE_TOKEN_LITERAL_RULE, LKT_GRAMMAR_RULE_TOKEN_NO_CASE_LITERAL_RULE, LKT_GRAMMAR_RULE_TOKEN_PATTERN_RULE, LKT_GRAMMAR_RULE_TOKEN_PATTERN_LITERAL_RULE, LKT_GRAMMAR_RULE_PARSE_NODE_EXPR_RULE, LKT_GRAMMAR_RULE_GRAMMAR_RULE_REF_RULE, LKT_GRAMMAR_RULE_GRAMMAR_LIST_EXPR_RULE, LKT_GRAMMAR_RULE_GRAMMAR_LIST_SEP_RULE, LKT_GRAMMAR_RULE_GRAMMAR_SKIP_RULE, LKT_GRAMMAR_RULE_GRAMMAR_NULL_RULE, LKT_GRAMMAR_RULE_GRAMMAR_TOKEN_RULE, LKT_GRAMMAR_RULE_TYPE_DECL_RULE, LKT_GRAMMAR_RULE_GENERIC_DECL_RULE, LKT_GRAMMAR_RULE_GENERIC_PARAM_TYPE_RULE, LKT_GRAMMAR_RULE_ENUM_LIT_DECL_RULE, LKT_GRAMMAR_RULE_FUN_DECL_RULE, LKT_GRAMMAR_RULE_LAMBDA_PARAM_DECL_RULE, LKT_GRAMMAR_RULE_FUN_PARAM_DECL_RULE, LKT_GRAMMAR_RULE_FUN_PARAM_LIST_RULE, LKT_GRAMMAR_RULE_LAMBDA_PARAM_LIST_RULE, LKT_GRAMMAR_RULE_FIELD_DECL_RULE, LKT_GRAMMAR_RULE_BARE_DECL_RULE, LKT_GRAMMAR_RULE_DECL_RULE, LKT_GRAMMAR_RULE_TYPE_MEMBER_REF_RULE, LKT_GRAMMAR_RULE_TYPE_EXPR_RULE, LKT_GRAMMAR_RULE_TYPE_REF_RULE, LKT_GRAMMAR_RULE_TYPE_LIST_RULE, LKT_GRAMMAR_RULE_DECLS_RULE, LKT_GRAMMAR_RULE_DECL_BLOCK_RULE, LKT_GRAMMAR_RULE_VAL_DECL_RULE, LKT_GRAMMAR_RULE_DYNVAR_DECL_RULE, LKT_GRAMMAR_RULE_VAR_BIND_RULE, LKT_GRAMMAR_RULE_ENV_SPEC_ACTION_RULE, LKT_GRAMMAR_RULE_ENV_SPEC_DECL_RULE, LKT_GRAMMAR_RULE_BLOCK_RULE, LKT_GRAMMAR_RULE_PATTERN_RULE, LKT_GRAMMAR_RULE_FIL_PATTERN_RULE, LKT_GRAMMAR_RULE_VALUE_PATTERN_RULE, LKT_GRAMMAR_RULE_REGEX_PATTERN_RULE, LKT_GRAMMAR_RULE_BOOL_PATTERN_RULE, LKT_GRAMMAR_RULE_ELLIPSIS_PATTERN_RULE, LKT_GRAMMAR_RULE_INTEGER_PATTERN_RULE, LKT_GRAMMAR_RULE_LIST_PATTERN_RULE, LKT_GRAMMAR_RULE_TUPLE_PATTERN_RULE, LKT_GRAMMAR_RULE_PATTERN_ARG_RULE, LKT_GRAMMAR_RULE_SELECTOR_CALL_RULE, LKT_GRAMMAR_RULE_EXPR_RULE, LKT_GRAMMAR_RULE_REL_RULE, LKT_GRAMMAR_RULE_EQ_RULE, LKT_GRAMMAR_RULE_ARITH_1_RULE, LKT_GRAMMAR_RULE_ARITH_2_RULE, LKT_GRAMMAR_RULE_ARITH_3_RULE, LKT_GRAMMAR_RULE_ISA_OR_PRIMARY_RULE, LKT_GRAMMAR_RULE_LOGIC_PROPAGATE_CALL_RULE, LKT_GRAMMAR_RULE_PRIMARY_RULE, LKT_GRAMMAR_RULE_MATCH_EXPR_RULE, LKT_GRAMMAR_RULE_NUM_LIT_RULE, LKT_GRAMMAR_RULE_BIG_NUM_LIT_RULE, LKT_GRAMMAR_RULE_STRING_LIT_RULE, LKT_GRAMMAR_RULE_BLOCK_STRING_LIT_RULE, LKT_GRAMMAR_RULE_CHAR_LIT_RULE, LKT_GRAMMAR_RULE_IF_EXPR_RULE, LKT_GRAMMAR_RULE_RAISE_EXPR_RULE, LKT_GRAMMAR_RULE_TRY_EXPR_RULE, LKT_GRAMMAR_RULE_ARRAY_LITERAL_RULE, LKT_GRAMMAR_RULE_CALLABLE_REF_RULE, LKT_GRAMMAR_RULE_NULL_COND_QUAL_RULE, LKT_GRAMMAR_RULE_BASIC_EXPR_RULE, LKT_GRAMMAR_RULE_TERM_RULE, LKT_GRAMMAR_RULE_BASIC_NAME_RULE, LKT_GRAMMAR_RULE_LAMBDA_EXPR_RULE, LKT_GRAMMAR_RULE_NULL_LIT_RULE, LKT_GRAMMAR_RULE_ARGUMENT_RULE, LKT_GRAMMAR_RULE_ARGS_RULE, LKT_GRAMMAR_RULE_DECL_ANNOTATION_ARGS_RULE, LKT_GRAMMAR_RULE_DECL_ANNOTATION_RULE
   } lkt_grammar_rule;
    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
typedef struct lkt_event_handler__struct *lkt_event_handler;
typedef void (*lkt_event_handler_destroy_callback)(void *data);
typedef void (*lkt_event_handler_unit_parsed_callback)(
   void *data,
   lkt_analysis_context context,
   lkt_analysis_unit unit,
   lkt_bool reparsed
);
typedef struct lkt_file_reader__struct *lkt_file_reader;
typedef struct lkt_unit_provider__struct *lkt_unit_provider;
extern lkt_analysis_context
lkt_allocate_analysis_context (void);
extern void
lkt_initialize_analysis_context(
   lkt_analysis_context context,
   const char *charset,
   lkt_file_reader file_reader,
   lkt_unit_provider unit_provider,
   lkt_event_handler event_handler,
   int with_trivia,
   int tab_stop
);
extern lkt_analysis_context
lkt_context_incref(lkt_analysis_context context);
extern void
lkt_context_decref(lkt_analysis_context context);
extern int
lkt_context_symbol(lkt_analysis_context context,
                                   lkt_text *text,
                                   lkt_symbol_type *symbol);
extern void
lkt_context_discard_errors_in_populate_lexical_env(
        lkt_analysis_context context,
        int discard);
extern lkt_analysis_unit
lkt_get_analysis_unit_from_file(
        lkt_analysis_context context,
        const char *filename,
        const char *charset,
        int reparse,
        lkt_grammar_rule rule);
extern lkt_analysis_unit
lkt_get_analysis_unit_from_buffer(
        lkt_analysis_context context,
        const char *filename,
        const char *charset,
        const char *buffer,
        size_t buffer_size,
        lkt_grammar_rule rule);
extern lkt_analysis_unit
lkt_get_analysis_unit_from_provider(
        lkt_analysis_context context,
        lkt_text *name,
        lkt_analysis_unit_kind kind,
        const char *charset,
        int reparse);
extern void
lkt_unit_root(lkt_analysis_unit unit,
                              lkt_node *result_p);
extern void
lkt_unit_first_token(lkt_analysis_unit unit,
                                     lkt_token *token);
extern void
lkt_unit_last_token(lkt_analysis_unit unit,
                                    lkt_token *token);
extern int
lkt_unit_token_count(lkt_analysis_unit unit);
extern int
lkt_unit_trivia_count(lkt_analysis_unit unit);
extern void
lkt_unit_dump_lexical_env(lkt_analysis_unit unit);
extern char *
lkt_unit_filename(lkt_analysis_unit unit);
extern unsigned
lkt_unit_diagnostic_count(lkt_analysis_unit unit);
extern int
lkt_unit_diagnostic(lkt_analysis_unit unit,
                                    unsigned n,
                                    lkt_diagnostic *diagnostic_p);
extern lkt_analysis_context
lkt_unit_context(lkt_analysis_unit context);
extern void
lkt_unit_reparse_from_file(lkt_analysis_unit unit,
                                           const char *charset);
extern void
lkt_unit_reparse_from_buffer (lkt_analysis_unit unit,
                                              const char *charset,
                                              const char *buffer,
                                              size_t buffer_size);