lkt/bootstrap/src/liblktlang-implementation-c.ads


   type lkt_event_handler_unit_parsed_callback is access procedure
     (Data     : System.Address;
      Context  : lkt_analysis_context;
      Unit     : lkt_analysis_unit;
      Reparsed : lkt_bool)
      with Convention => C;
   --  Callback that will be called when any unit is parsed from the context
   --  ``Context``.
   --
   --  ``Unit`` is the resulting unit.
   --
   --  ``Reparsed`` indicates whether the unit was reparsed, or whether it was
   --  the first parse.

   type lkt_event_handler_destroy_callback is access procedure
     (Data : System.Address)
      with Convention => C;
   --  Callback type for functions that are called when destroying an event
   --  handler.

   --------------------
   -- Unit providers --
   --------------------

   type lkt_unit_provider is new System.Address;
   --  Interface to fetch analysis units from a name and a unit kind.
   --
   --  The unit provider mechanism provides an abstraction which assumes that
   --  to any couple (unit name, unit kind) we can associate at most one source
   --  file. This means that several couples can be associated to the same
   --  source file, but on the other hand, only one one source file can be
   --  associated to a couple.
   --
   --  This is used to make the semantic analysis able to switch from one
   --  analysis units to another.
   --
   --  See the documentation of each unit provider for the exact semantics of
   --  the unit name/kind information.

   -------------------------
   -- Analysis primitives --
   -------------------------

   function lkt_allocate_analysis_context
     return lkt_analysis_context
     with Export,
          Convention    => C,
          External_name => "lkt_allocate_analysis_context";
   --  Allocate a new analysis context.

   procedure lkt_initialize_analysis_context
     (Context       : lkt_analysis_context;
      Charset       : chars_ptr;
      File_Reader   : lkt_file_reader;
      Unit_Provider : lkt_unit_provider;
      Event_Handler : lkt_event_handler;
      With_Trivia   : int;
      Tab_Stop      : int)
      with Export,
           Convention    => C,
           External_name => "lkt_initialize_analysis_context";
   --  Initialize an analysis context. Must be called right after
   --  ``Allocate_Context`` on its result.
   --
   --  Having separate primitives for allocation/initialization allows library
   --  bindings to have a context wrapper (created between the two calls) ready
   --  when callbacks that happen during context initialization (for instance
   --  "unit parsed" events).

   function lkt_context_incref
     (Context : lkt_analysis_context)
      return lkt_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "lkt_context_incref";
   --  Increase the reference count to an analysis context. Return the
   --  reference for convenience.

   procedure lkt_context_decref
     (Context : lkt_analysis_context)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_context_decref";
   --  Decrease the reference count to an analysis context. Destruction happens
   --  when the ref-count reaches 0.

   function lkt_context_symbol
     (Context : lkt_analysis_context;
      Text    : access lkt_text;
      Symbol  : access lkt_symbol_type) return int
      with Export, Convention => C,
           External_name => "lkt_context_symbol";
   --  If the given string is a valid symbol, yield it as a symbol and return
   --  true. Otherwise, return false.

   procedure lkt_context_discard_errors_in_populate_lexical_env
     (Context : lkt_analysis_context;
      Discard : int)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_context_discard_errors_in_populate_lexical_env";
   --  Debug helper. Set whether ``Property_Error`` exceptions raised in
   --  ``Populate_Lexical_Env`` should be discarded. They are by default.

   function lkt_get_analysis_unit_from_file
     (Context           : lkt_analysis_context;
      Filename, Charset : chars_ptr;
      Reparse           : int;
      Rule              : lkt_grammar_rule)
      return lkt_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "lkt_get_analysis_unit_from_file";
   --  Create a new analysis unit for ``Filename`` or return the existing one
   --  if any. If ``Reparse`` is true and the analysis unit already exists,
   --  reparse it from ``Filename``.
   --
   --  ``Rule`` controls which grammar rule is used to parse the unit.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as file opening, decoding, lexing or parsing
   --  failure, return an analysis unit anyway: errors are described as
   --  diagnostics of the returned analysis unit.

   function lkt_get_analysis_unit_from_buffer
     (Context           : lkt_analysis_context;
      Filename, Charset : chars_ptr;
      Buffer            : chars_ptr;
      Buffer_Size       : size_t;
      Rule              : lkt_grammar_rule)
      return lkt_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "lkt_get_analysis_unit_from_buffer";
   --  Create a new analysis unit for ``Filename`` or return the existing one
   --  if any. Whether the analysis unit already exists or not, (re)parse it
   --  from the source code in ``Buffer``.
   --
   --  ``Rule`` controls which grammar rule is used to parse the unit.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as file opening, decoding, lexing or parsing
   --  failure, return an analysis unit anyway: errors are described as
   --  diagnostics of the returned analysis unit.

   function lkt_get_analysis_unit_from_provider
     (Context : lkt_analysis_context;
      Name    : lkt_text;
      Kind    : lkt_analysis_unit_kind;
      Charset : chars_ptr;
      Reparse : int) return lkt_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "lkt_get_analysis_unit_from_provider";
   --  Create a new analysis unit for ``Name``/``Kind`` or return the existing
   --  one if any. If ``Reparse`` is true and the analysis unit already exists,
   --  reparse it from the on-disk source file.
   --
   --  The ``Name`` and ``Kind`` arguments are forwarded directly to query the
   --  context's unit provider and get the filename for the returned unit. See
   --  the documentation of the relevant unit provider for their exact
   --  semantics.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If the unit name cannot be tuned into a file name, return ``NULL``. If
   --  any other failure occurs, such as file opening, decoding, lexing or
   --  parsing failure, return an analysis unit anyway: errors are described as
   --  diagnostics of the returned analysis unit.

   procedure lkt_unit_root
     (Unit     : lkt_analysis_unit;
      Result_P : lkt_node_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_root";
   --  Return the root node for this unit, or ``NULL`` if there is none.

   procedure lkt_unit_first_token
     (Unit  : lkt_analysis_unit;
      Token : access lkt_token)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_first_token";
   --  Return a reference to the first token scanned in this unit.

   procedure lkt_unit_last_token
     (Unit  : lkt_analysis_unit;
      Token : access lkt_token)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_last_token";
   --  Return a reference to the last token scanned in this unit.

   function lkt_unit_token_count
     (Unit : lkt_analysis_unit) return int
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_unit_token_count";
   --  Return the number of tokens in this unit.

   function lkt_unit_trivia_count
     (Unit : lkt_analysis_unit) return int
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_unit_trivia_count";
   --  Return the number of trivias in this unit. This is 0 for units that were
   --  parsed with trivia analysis disabled.

   procedure lkt_unit_lookup_token
     (Unit   : lkt_analysis_unit;
      Sloc   : access lkt_source_location;
      Result : access lkt_token)
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_unit_lookup_token";
   --  Look for a token in this unit that contains the given source location.
   --  If this falls before the first token, return the first token. If this
   --  falls between two tokens, return the token that appears before. If this
   --  falls after the last token, return the last token. If there is no token
   --  in this unit, return no token.

   procedure lkt_unit_dump_lexical_env
     (Unit : lkt_analysis_unit)
      with Export        => True,
           Convention    => C,
           External_Name => "lkt_unit_dump_lexical_env";

   function lkt_unit_filename
     (Unit : lkt_analysis_unit)
      return chars_ptr
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_filename";
   --  Return the filename this unit is associated to.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.

   function lkt_unit_diagnostic_count
     (Unit : lkt_analysis_unit) return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_diagnostic_count";
   --  Return the number of diagnostics associated to this unit.

   function lkt_unit_diagnostic
     (Unit         : lkt_analysis_unit;
      N            : unsigned;
      Diagnostic_P : access lkt_diagnostic) return int
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_diagnostic";
   --  Get the Nth diagnostic in this unit and store it into ``*diagnostic_p``.
   --  Return zero on failure (when N is too big).

   function lkt_unit_context
     (Unit : lkt_analysis_unit)
      return lkt_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_context";
   --  Return the context that owns this unit.

   procedure lkt_unit_reparse_from_file
     (Unit : lkt_analysis_unit; Charset : chars_ptr)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_reparse_from_file";
   --  Reparse an analysis unit from the associated file.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  diagnostic are emitted to explain what happened.

   procedure lkt_unit_reparse_from_buffer
     (Unit        : lkt_analysis_unit;
      Charset     : chars_ptr;
      Buffer      : chars_ptr;
      Buffer_Size : size_t)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_reparse_from_buffer";
   --  Reparse an analysis unit from a buffer.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  diagnostic are emitted to explain what happened.
